# main.go
@@ -56,6 +56,10 @@ func main() {
 	e.GET("/events/:event_id/fightcard", handlers.GetFightCard)
 
 
-
+	e.POST("/admin/events", handlers.CreateEvent, middleware.AdminMiddleware)
+	e.PUT("/admin/events/:id", handlers.UpdateEvent, middleware.AdminMiddleware)
+	e.DELETE("/admin/events/:id", handlers.DeleteEvent, middleware.AdminMiddleware)
+	e.POST("/admin/users/:id/role", handlers.UpdateUserRole, middleware.AdminMiddleware)
+	
 	e.Logger.Fatal(e.Start(":8080"))
 }
